--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ body{
                 <ul class="ea-menu">
                     <li>
                         <a target="_parent" href="https://ezera.hu/telefon_397/mobiltelefon-695">
-                            <span class="ea-icon"><img class="icon-img" src="/custom/ezerateszt/image/cache/w0h0q80np1/category-image/mobil-mobilephone.png"></span>
+                            <span class="ea-icon"><img class="icon-img" src="https://ezera.hu/custom/ezerateszt/image/data/category-image/mobil-mobilephone.png"></span>
                             <div class="ea-content">
                                 <h2 class="ea-main">Mobiltelefon</h2>
                                 <h3 class="ea-sub"></h3>
@@ -150,7 +150,7 @@ body{
                     </li>
                     <li>
                        <a target="_parent" href="https://ezera.hu/telefon_397/kiegeszitok-698">
-                            <span class="ea-icon"><img class="icon-img" src="/custom/ezerateszt/image/cache/w0h0q80np1/category-image/mobil-access.png"></span>
+                            <span class="ea-icon"><img class="icon-img" src="https://ezera.hu/custom/ezerateszt/image/cache/w0h0q80np1/category-image/mobil-access.png"></span>
                             <div class="ea-content">
                                 <h2 class="ea-main">Kiegészítők</h2>
                                 <h3 class="ea-sub"></h3>
@@ -159,7 +159,7 @@ body{
                     </li>
                     <li>
                        <a target="_parent" href="https://ezera.hu/telefon_397/tok-714">
-                            <span class="ea-icon"><img class="icon-img" src="/custom/ezerateszt/image/cache/w0h0q80np1/category-image/mobil-case.png"></span>
+                            <span class="ea-icon"><img class="icon-img" src="https://ezera.hu/custom/ezerateszt/image/cache/w0h0q80np1/category-image/mobil-case.png"></span>
                             <div class="ea-content">
                                 <h2 class="ea-main">Tok</h2>
                                 <h3 class="ea-sub"></h3>
@@ -168,7 +168,7 @@ body{
                     </li>
                     <li>
                         <a target="_parent" href="https://ezera.hu/telefon_397/kulso-akku-719">
-                            <span class="ea-icon"><img class="icon-img" src="/custom/ezerateszt/image/cache/w0h0q80np1/category-image/mobil-powerbank.png"></span>
+                            <span class="ea-icon"><img class="icon-img" src="https://ezera.hu/custom/ezerateszt/image/cache/w0h0q80np1/category-image/mobil-powerbank.png"></span>
                             <div class="ea-content">
                                 <h2 class="ea-main">Külső akku</h2>
                                 <h3 class="ea-sub"></h3>
@@ -183,7 +183,7 @@ body{
                 <ul class="ea-menu">
                     <li>
                         <a target="_parent" href="https://ezera.hu/telefon_397/okosora-697">
-                            <span class="ea-icon"><img class="icon-img" src="/custom/ezerateszt/image/cache/w0h0q80np1/category-image/mobile-smartwatch.png"></span>
+                            <span class="ea-icon"><img class="icon-img" src="https://ezera.hu/custom/ezerateszt/image/cache/w0h0q80np1/category-image/mobile-smartwatch.png"></span>
                             <div class="ea-content">
                                 <h2 class="ea-main">Okosóra</h2>
                                 <h3 class="ea-sub"></h3>
