--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ body{
     font-family: 'Ubuntu';
 }
 .ea-menu li:hover{
-    background: #0072bc 50px 50%;
+    background: #5ded6b 50px 50%;
     border-radius: 0px 0px 0px 20px;
 }
 .ea-menu li:hover .ea-icon{
