--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body{
     transform: scale(3);
 }
 .ea-menu li:hover .ea-main{
-    color: #fff;
+    color: #2180d9;
     opacity: 1;
 }
 .ea-menu li:hover .ea-sub{
