--- a/index.html
+++ b/index.html
@@ -111,9 +111,8 @@ body{
     font-family: 'Ubuntu';
 }
 .ea-menu li:hover{
-    background: #5ded6b 50px 50%;
+    background: #5ded6b80 50px 50%;
     border-radius: 0px 0px 0px 20px;
-    opacity: 0.5;
 }
 .ea-menu li:hover .ea-icon{
     opacity: 0.5;
