--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ body{
     font-family: 'Ubuntu';
 }
 .ea-menu li:hover{
-    background: #5ded6b80 50px 50%;
+    background: #5ded6b 50px 50%;
     border-radius: 0px 0px 0px 20px;
 }
 .ea-menu li:hover .ea-icon{
@@ -124,7 +124,7 @@ body{
     transform: scale(3);
 }
 .ea-menu li:hover .ea-main{
-    color: #2180d9;
+    color: #fff;
     opacity: 1;
 }
 .ea-menu li:hover .ea-sub{
